--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@hono/node-server": "^1.14.3",
     "@prisma/client": "^6.8.2",
+    "bcrypt": "^6.0.0",
     "hono": "^4.7.10"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.17",
     "prisma": "^6.8.2",
     "tsx": "^4.7.1",
