--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -10,10 +10,12 @@
     "@hono/node-server": "^1.14.3",
     "@prisma/client": "^6.8.2",
     "bcrypt": "^6.0.0",
-    "hono": "^4.7.10"
+    "hono": "^4.7.10",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.11.17",
     "prisma": "^6.8.2",
     "tsx": "^4.7.1",
