--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
     "lucide": "^0.511.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
